--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -240,7 +240,8 @@ div {
     cursor: pointer;
   }
 
-  .button {
+  .button, 
+  #lotrButton {
     border-radius: 100px;
     display: inline-block;
     font-family: 'Open Sans', Helvetica, sans-serif;
