Updated form to flex

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -144,6 +144,11 @@ textarea {
   width: 100%;
 }
 
+form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 /* 4. Button Styles
 ======================================== */
 button {
